--- a/Bookshelf/src/main/webapp/css/dashboard.css
+++ b/Bookshelf/src/main/webapp/css/dashboard.css
@@ -36,7 +36,7 @@
     color: #ffd700;
 }
 
-/* Dashboard Container with Improved Scrolling */
+/* Dashboard Container */
 .dashboard-container {
     text-align: center;
     max-width: 800px;
@@ -91,8 +91,6 @@
     bottom: 0;
     font-size: 0.7rem; 
 }
-
-
 
 
 .search-section {
@@ -192,3 +190,62 @@
 	text-align: right;
 }
 
+
+.card {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: centre;
+}
+
+.display-text {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.form-control {
+    display: none;
+}
+
+.btn-edit {
+    margin-left: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-edit:hover {
+    background-color: #333333;
+}
+
+.btn-update {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.btn-update:hover {
+    background-color: #0056b3;
+}
+
+.success-message {
+    color: green;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.error-message {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
